--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>nyoba remote part 2</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quod tenetur ex pariatur doloremque, beatae provident earum consequatur dicta sit optio alias assumenda quos mollitia eaque neque! Esse, sapiente quibusdam?</p>
 </body>
 </html>
